--- a/networking/server/package.json
+++ b/networking/server/package.json
@@ -9,6 +9,7 @@
   "author": "Michael May | Ivan Mayes",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.18.2",
     "child_process": "1.0.2",
     "express": "4.16.3",
     "node-wifiscanner": "0.2.1"
